--- a/App/mobile/src/main/res/layout/activity_main.xml
+++ b/App/mobile/src/main/res/layout/activity_main.xml
@@ -4,39 +4,106 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:gravity="center"
     android:orientation="vertical"
     tools:context=".MainActivity">
+
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="top|center"
+        android:layout_marginBottom="25dp"
         android:text="@string/app_name"
-        android:textSize="30sp"/>
+        android:textColor="#000000"
+        android:textSize="60sp"/>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="8dp"
+            android:src="@drawable/red"
+            />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/blue"
+            />
+
+    </LinearLayout>
+
+
+
 
     <EditText
         android:id="@+id/zipcode"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_gravity="center"
+        android:gravity="center"
         android:hint="@string/zip_hint"
         android:inputType="number"/>
 
     <TextView
+        android:id="@+id/or"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_gravity="center"
         android:text="OR"/>
 
-    <EditText
-        android:id="@+id/location"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="@string/loc_hint"/>
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/location"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_gravity="center"
+            android:layout_marginRight="10dp"
+            android:gravity="center"
+            android:hint="@string/loc_hint"/>
+
+        <Button
+            android:id="@+id/use_current"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:text="@string/current"
+            />
+
+    </LinearLayout>
+
 
     <Button
         android:id="@+id/find_button"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_gravity="center"
+        android:textSize="11pt"
         android:text="Find"/>
+
+
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="160dp"
+        android:layout_height="160dp"
+        android:layout_marginTop="30dp"
+        android:indeterminate="true"
+        android:layout_gravity="center|bottom"
+        android:layout_centerHorizontal="true"
+        android:visibility="gone" />
 
 
 </LinearLayout>
