--- a/App/wear/src/main/res/layout/activity_main.xml
+++ b/App/wear/src/main/res/layout/activity_main.xml
@@ -6,6 +6,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <!-- Include just like a normal ViewPager -->
+    <Button
+        android:id="@+id/elect"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="10dp"
+        android:layout_gravity="center|top"
+        android:text="2012 Election"
+        android:textSize="4pt" />
     <!--<Button-->
         <!--android:id="@+id/elect"-->
         <!--android:layout_width="wrap_content"-->
@@ -15,6 +24,12 @@
         <!--android:layout_marginTop="10dp"-->
         <!--android:text="2012 Election"-->
         <!--android:textSize="4pt" />-->
+    <!--<ImageView-->
+        <!--android:id="@+id/pic"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:src="@drawable/donkey"-->
+        <!--android:layout_gravity="center|top" />-->
 
     <android.support.wearable.view.GridViewPager
         android:id="@+id/pager"
